# neuromaps

./: .gitattributes  .gitignore  .readthedocs.yaml  .zenodo.json  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: brain-map-request.yml  bug-report.yml  issue-template.yml
.github/workflows/: docker-release.yml  docs.yml  tests.yml
brainnotation/: __init__.py  _version.py  caret.py  civet.py  images.py  parcellate.py  plotting.py  points.py  resampling.py  stats.py  transforms.py  utils.py
brainnotation/datasets/: _osf.py  annotations.py  atlases.py  utils.py
brainnotation/datasets/data/: osf.json
brainnotation/datasets/tests/: test__osf.py  test_annotations.py  test_atlases.py  test_utils.py
brainnotation/nulls/: __init__.py  burt.py  nulls.py  spins.py
brainnotation/nulls/tests/: test_burt.py  test_nulls.py  test_spins.py
brainnotation/tests/: conftest.py  test_caret.py  test_civet.py  test_images.py  test_parcellate.py  test_plotting.py  test_points.py  test_resampling.py  test_stats.py  test_transforms.py  test_utils.py
docs/: Makefile  api.rst  citing.rst  conf.py  contributing.rst  index.rst  installation.rst  listofmaps.rst  requirements.txt  usage.rst
docs/_static/: theme_overrides.css
docs/_templates/: class.rst  function.rst
docs/user_guide/: annotations.rst  atlases.rst  comparisons.rst  nulls.rst  reporting.rst  transformations.rst
examples/: README.txt  plot_fetch_datasets.py  plot_spatial_nulls.py
neuromaps/: __init__.py  _version.py  caret.py  civet.py  images.py  parcellate.py  plotting.py  points.py  resampling.py  stats.py  transforms.py  utils.py  workflows.py
neuromaps/datasets/: __init__.py  _osf.py  annotations.py  atlases.py  contributions.py  utils.py
neuromaps/datasets/data/: info.json  meta.json  neuromaps.bib  osf.json  refs.bib
neuromaps/datasets/tests/: test__osf.py  test_annotations.py  test_atlases.py  test_utils.py
neuromaps/nulls/: __init__.py  burt.py  eigen.py  nulls.py  spins.py  vol_nulls.py
neuromaps/nulls/tests/: test_burt.py  test_nulls.py  test_spins.py
neuromaps/tests/: conftest.py  test_caret.py  test_civet.py  test_images.py  test_parcellate.py  test_plotting.py  test_points.py  test_resampling.py  test_stats.py  test_transforms.py  test_utils.py  test_workflows.py
tools/: install_dependencies.sh  install_package.sh  run_checks.sh
