[metadata]
name = brainnotation
url = https://github.com/rmarkello/brainnotation
download_url = https://github.com/rmarkello/brainnotation
author = Network Neuroscience Lab
maintainer = Network Neuroscience Lab
maintainer_email = rossmarkello+coding@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7
license = BSD-3
description = A toolbox for projecting, resampling, and comparing brain maps
long_description = file:README.md
long_description_content_type = text/markdown
platforms = OS Independent
provides =
    brainnotation

[options]
python_requires = >=3.7
install_requires =
    matplotlib
    nibabel
    nilearn
    numpy
    scikit-learn
    scipy
zip_safe = False
packages = find:

[options.extras_require]
doc =
    sphinx >=2.0
    sphinx_rtd_theme
style =
    flake8
test =
    coverage
    pytest >=3.6
    pytest-cov
all =
    %(doc)s
    %(style)s
    %(test)s

[options.package_data]
brainnotation =
    data/*

[bdist_wheel]
universal=1

[flake8]
doctests = True
exclude =
    *build/
    *sphinx*
    */__init__.py
ignore = W503, E402
max-line-length = 79

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE
xfail_strict = true
addopts = -rx
