[metadata]
name = neuromaps
url = https://github.com/netneurolab/neuromaps
download_url = https://github.com/netneurolab/neuromaps
author = Network Neuroscience Lab
maintainer = Network Neuroscience Lab
maintainer_email = rossmarkello+coding@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license = BSD-3
description = A toolbox for projecting, resampling, and comparing brain maps
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
platforms = OS Independent
provides =
    neuromaps

[options]
python_requires = >=3.7
install_requires =
    matplotlib
    nibabel >=3.0.0
    nilearn
    numpy >=1.14.0
    scikit-learn
    scipy >=0.17
zip_safe = False
packages = find:

[options.extras_require]
doc =
    sphinx >=2.0
    sphinx_rtd_theme
nulls =
    brainsmash >=0.10.0
    brainspace
style =
    flake8
test =
    coverage
    pytest >=3.6
    pytest-cov
all =
    %(doc)s
    %(nulls)s
    %(style)s
    %(test)s

[options.package_data]
neuromaps =
    data/*
    datasets/data/*

[bdist_wheel]
universal=1

[coverage:run]
omit =
    neuromaps/_version.py

[flake8]
doctests = True
exclude =
    *build/
    *sphinx*
    */__init__.py
ignore = W503, E402
max-line-length = 79

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE
xfail_strict = true
addopts = -rx
markers =
    workbench: mark a test as requiring connectome workbench

[versioneer]
VCS = git
style = pep440
versionfile_source = neuromaps/_version.py
versionfile_build = neuromaps/_version.py
tag_prefix =
parentdir_prefix =
